--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   intl: ^0.19.0
-  
+  cross_file: ^0.3.4
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   font_awesome_flutter: ^10.7.0
